--- a/style.css
+++ b/style.css
@@ -48,6 +48,15 @@ nav {
   z-index: 1;
 }
 
+.fixed-nav {
+    padding-top: 64px;
+}
+
+.fixed-nav nav {
+    position: fixed;
+    box-shadow: 0 5px rgba(0, 0, 0, 0.1);
+}
+
 nav ul {
   margin: 0;
   padding:0;
