Add logo to fixed navbar

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ li.logo {
   max-width:0;
   overflow: hidden;
   background: white;
-  transition: all .5s;
+  transition: all 5s;
   font-weight: 600;
   font-size: 30px;
 }
@@ -85,6 +85,9 @@ li.logo a {
   color:black;
 }
 
+.fixed-nav li.logo {
+    max-width: 500px;
+}
 nav a {
   text-decoration: none;
   padding:20px;
